Fixed navigation z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -146,6 +146,7 @@ em {
   left: 0;
   bottom: 0;
   width: 100%;
+  z-index: 95;
 }
 
 input, label {
